# garmin-to-fittrackee

./: .gitignore  LICENSE  README.md  coverage.json  pyproject.toml
.forgejo/workflows/: development.yaml  pr_to_main.yaml  releases.yaml
.gitea/workflows/: development.yaml  pr_to_main.yaml  releases.yaml
.github/workflows/: development.yaml  pr_to_main.yaml  releases.yaml
.old-forgejo-ci/workflows/: releases.yaml
garmin_to_fittrackee/: fittrackee.py  logs.py  main.py  s2f.py  sports.py  workout.py
tests/: test_fittrackee.py  test_logs.py  test_sports.py  test_workout.py
tests/files/: Saint-Herblain_58_4km.gpx  all_workouts.json  config.yml  config_bad_fittrackee.yaml  config_fittrackee.yaml  config_without_logs.yml  get_bad_config.json  get_config.json  get_sports.json  post_gpx_responses.json
